--- a/Register/register.html
+++ b/Register/register.html
@@ -37,6 +37,10 @@
                         <input class="form-control" type="text" placeholder="Nombre de usuario" />
                     </div>
 
+                    <div class="form-group" id="email">
+                        <input class="form-control" type="text" placeholder="Email" />
+                    </div>
+
                     <div class="form-group" id="pass">
                         <input class="form-control" type="text" placeholder="Contraseña" />
                     </div>
