--- a/Register/register.html
+++ b/Register/register.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
     <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
+    <!-- Js externo-->
+    <script type="text/javascript" src="js/register.js"></script>
+
     <!-- Nuestro css-->
     <link rel="stylesheet" type="text/css" href="static/css/login.css">
 
@@ -45,7 +48,7 @@
                         <input class="form-control" type="text" placeholder="Contraseña" />
                     </div>
 
-                    <button type="button" class="btn btn-danger"><i class="fas fa-user-plus"></i> Registrarme</button>
+                    <button type="button" class="btn btn-danger" onclick="register()"><i class="fas fa-user-plus"></i> Registrarme</button>
                     <div class="col-12 forgot">
                         <a href="login.html">¿Ya tienes una cuenta? Inicia sesion.</a>
                     </div>
@@ -54,6 +57,11 @@
         </div>
     </div>
 
+    <script>
+        function register(){
+            postRequest(nombre, email, password, avatar);
+        }
+    </script>
 
 </body>
 
