--- a/Register/register.html
+++ b/Register/register.html
@@ -14,9 +14,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
     <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
-    <!-- Js externo-->
-    <script type="text/javascript" src="js/register.js"></script>
-
     <!-- Nuestro css-->
     <link rel="stylesheet" type="text/css" href="static/css/login.css">
 
@@ -41,14 +38,61 @@
                     </div>
 
                     <div class="form-group" id="email">
-                        <input class="form-control" type="text" placeholder="Email" />
+                        <input class="form-control" type="email" placeholder="Correo electronico" />
                     </div>
 
                     <div class="form-group" id="pass">
-                        <input class="form-control" type="text" placeholder="Contraseña" />
+                        <input class="form-control" type="password" placeholder="Contraseña" />
                     </div>
 
-                    <button type="button" class="btn btn-danger" onclick="register()"><i class="fas fa-user-plus"></i> Registrarme</button>
+                    <div class="avatar">
+                        <h2>Selecciona un <span class="orange">avatar</span> </h2>
+                        <ul class="ul-avatar">
+                            <li class="il-avatar">
+                                <input type='radio' value='1' name='radio' class="input-avatar" id='radio1'/>
+                                <label class="label-avatar" for='radio1'><img src="/static/img/avatar01.png" class="avatar-foto"></label>
+                            </li>
+                            <li class="il-avatar">
+                                <input type='radio' value='2' name='radio'  class="input-avatar" id='radio2'/>
+                                <label class="label-avatar" for='radio2'><img src="/static/img/avatar02.png" class="avatar-foto"></label>
+                            </li>
+                            <li class="il-avatar">
+                                <input type='radio' value='3' name='radio'  class="input-avatar" id='radio3'/>
+                                <label class="label-avatar" for='radio3'><img src="/static/img/avatar03.png" class="avatar-foto"></label>
+                            </li>
+                        </ul>
+                        <ul class="ul-avatar">
+                            <li class="il-avatar">
+                                <input type='radio' value='4' name='radio' class="input-avatar" id='radio4'/>
+                                <label class="label-avatar" for='radio4'><img src="/static/img/avatar04.png" class="avatar-foto"></label>
+                            </li>
+                            <li class="il-avatar">
+                                <input type='radio' value='5' name='radio'  class="input-avatar" id='radio5'/>
+                                <label class="label-avatar" for='radio5'><img src="/static/img/avatar05.png" class="avatar-foto"></label>
+                            </li>
+                            <li class="il-avatar">
+                                <input type='radio' value='6' name='radio'  class="input-avatar" id='radio6'/>
+                                <label class="label-avatar" for='radio6'><img src="/static/img/avatar06.png" class="avatar-foto"></label>
+                            </li>
+                        </ul>
+                        <ul class="ul-avatar">
+                            <li class="il-avatar">
+                                <input type='radio' value='7' name='radio' class="input-avatar" id='radio7'/>
+                                <label class="label-avatar" for='radio7'><img src="/static/img/avatar07.png" class="avatar-foto"></label>
+                            </li>
+                            <li class="il-avatar">
+                                <input type='radio' value='8' name='radio'  class="input-avatar" id='radio8'/>
+                                <label class="label-avatar" for='radio8'><img src="/static/img/avatar08.png" class="avatar-foto"></label>
+                            </li>
+                            <li class="il-avatar">
+                                <input type='radio' value='9' name='radio'  class="input-avatar" id='radio9'/>
+                                <label class="label-avatar" for='radio9'><img src="/static/img/avatar09.png" class="avatar-foto"></label>
+                            </li>
+                        </ul>
+
+                    </div>
+
+                    <center><button type="button" class="btn btn-danger"><i class="fas fa-user-plus"></i> Registrarme</button></center>
                     <div class="col-12 forgot">
                         <a href="login.html">¿Ya tienes una cuenta? Inicia sesion.</a>
                     </div>
@@ -57,11 +101,6 @@
         </div>
     </div>
 
-    <script>
-        function register(){
-            postRequest(nombre, email, password, avatar);
-        }
-    </script>
 
 </body>
 
