--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
         function verificar(){
             let name = document.getElementById('username').value;
             let password = document.getElementById('password').value;
-            getPlayers(name,password);
+            postRequest(name,password);
         }
     </script>
 
