--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
                 </div>
                 <form class="col-12" id="cuadro">
                     <div class="form-group" id="user">
-                        <input class="form-control" type="text" placeholder="Nombre de usuario" id="username"/>
+                        <input class="form-control" type="email" placeholder="Email" id="email"/>
                     </div>
 
                     <div class="form-group" id="pass">
@@ -55,9 +55,9 @@
 
     <script>
         function verificar(){
-            let name = document.getElementById('username').value;
+            let mail = document.getElementById('email').value;
             let password = document.getElementById('password').value;
-            postRequest(name,password);
+            postRequest(mail,password);
         }
     </script>
 
