--- a/register.html
+++ b/register.html
@@ -121,7 +121,7 @@
             }else{
                 postRequest(name, email, password, avatar);
                 alert('Te has registrado correctamente!');
-                location.href ="login.html";
+                location.href ="index.html";
             }
             
         }
