--- a/home.html
+++ b/home.html
@@ -21,23 +21,23 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Comunidad</a>
+                        <a class="nav-link" href="community.html">Comunidad</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contactanos</a>
+                        <a class="nav-link" href="contacto.html">Contactanos</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-user"></i>
+                            <!--<i class="fas fa-user"></i>-->
+                            <img id="perfil" src="">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
+                            <li><a class="dropdown-item" href="index.html">Cerrar sesión</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -81,21 +81,25 @@
 
     <!--    FOOTER  -->
 
-    <footer>
-        <div class="footer-content">
-            <h3>RPG</h3>
-            <p>Somos una empresa de tres gays, haciendo cosas de gays, para gays. Soy vegana.</p>
-            <ul class="social">
-                <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                <li><a href=""><i class="fab fa-reddit"></i></a></li>
-            </ul>
-        </div>
-        <div class="footer-botton">
-            <p>copyright &copy;2021 rpg. desighed by <span>EOM</span></p>
-        </div>
-    </footer>
+    <section class="footer">
+        <footer class="bg-light text-center text-lg-start">
+            <div class="text-center p-3 text-white" style="background-color:  rgb(50, 50, 50)">
+                Copyright ©2021 Rpg. Desighed By EMO
+                <div id="icono">
+                    <a><i class="fab fa-instagram"></i></a>
+                    <a><i class="fab fa-facebook-f"></i></a>
+                    <a><i class="fab fa-twitter"></i></a>
+                    <a><i class="fab fa-reddit-square"></i></a>
+                </div>
+            </div>
+        </footer>
+    </section>
+
+    <script>
+        let perf = document.getElementById('perfil');
+        let ruta = localStorage.getItem('avatar');
+        perf.src = '' + ruta + '';
+    </script>
 
 </body>
 
