--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar bg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="static/img/game.png" class="icon"></a>
+            <a class="navbar-brand" href="home.html"><img src="static/img/game.png" class="icon"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"><i class="fas fa-bars" id="hamburguesa"></i></span>
@@ -56,10 +56,10 @@
         <div class="home">
 
             <div>
-                <h1>Welcome to, <br>
+                <h1>Bienvenidos a <br>
                     R<span>P</span>G <br>
-                    The Best Play<br>
-                    Out There!!
+                    ¡La mejor <span>comunidad</span><br>
+                    para <span>jugadores</span>!
                 </h1>
                 <h5> Enseña, aprende, mejora... <br>
                     Ramdon <span>Players</span> Gamers</h5>
