--- a/register.html
+++ b/register.html
@@ -97,7 +97,7 @@
 
                     <center><button type="button" class="btn btn-danger" onclick="register()"><i class="fas fa-user-plus"></i> Registrarme</button></center>
                     <div class="col-12 forgot">
-                        <a href="login.html">¿Ya tienes una cuenta? Inicia sesion.</a>
+                        <a href="index.html">¿Ya tienes una cuenta? Inicia sesion.</a>
                     </div>
                 </form>
             </div>
