--- a/perfil.html
+++ b/perfil.html
@@ -18,7 +18,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar bg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="/static/img/game.png" class="icon"></a>
+              <a class="navbar-brand" href="home.html"><img src="/static/img/game.png" class="icon"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"><i class="fas fa-bars" id="hamburguesa"></i></span>
               </button>
