Modificaciones de estilo

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <!-- Nuestro css-->
   <link rel="stylesheet" type="text/css" href="static/css/login.css">
+  <link rel="shortcut icon" href="/static/img/game.png">
 
 </head>
 
