--- a/juegos.html
+++ b/juegos.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="static/css/juegos.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
     <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <link rel="shortcut icon" href="/static/img/game.png">
 </head>
 
 <body>
