--- a/perfil.html
+++ b/perfil.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+    <title>RPG</title>
             <!--JQUERY-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -13,6 +14,7 @@
 
     <!-- Nuestro css-->
     <link rel="stylesheet" type="text/css" href="static/css/perfil.css">
+    <link rel="shortcut icon" href="/static/img/game.png">
     </head>
 
     <body>
