--- a/preload.html
+++ b/preload.html
@@ -5,6 +5,7 @@
     <title>RPG</title>
     <link rel="stylesheet" type="text/css" href="static/css/style_preload.css">
     <script type="text/javascript" src="js/preload.js"></script>
+    <link rel="shortcut icon" href="/static/img/game.png">
 </head>
 
 <body>
