--- a/home.html
+++ b/home.html
@@ -3,11 +3,13 @@
 <head>
     <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <meta charset="utf-8">
+    <title>RPG</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="static/css/home.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
+    <link rel="shortcut icon" href="/static/img/game.png">
 </head>
 
 <body>
