--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Login</title>
+    <title>Registro</title>
 
     <!--JQUERY-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -19,6 +19,7 @@
 
     <!-- Nuestro css-->
     <link rel="stylesheet" type="text/css" href="static/css/register.css">
+    <link rel="shortcut icon" href="/static/img/game.png">
 
 </head>
 
